[package]
name = "HasherPass"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
rpassword = "7.2.0"
base64 = "0.21"
sha2 = "0.10"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
axum-server = "0.7.2"
